--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@expo/vector-icons": "^9.0.0",
     "@shoutem/ui": "^0.23.9",
     "expo": "^32.0.0",
+    "immer": "^1.10.5",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-iphone-x-helper": "^1.2.0",
     "react-native-switch-toggle": "^1.0.7",
-    "react-navigation": "^3.0.9"
+    "react-navigation": "^3.0.9",
+    "redux": "^4.0.1",
+    "redux-saga": "^0.16.2"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
