--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "react-native-iphone-x-helper": "^1.2.0",
     "react-native-switch-toggle": "^1.0.7",
     "react-navigation": "^3.0.9",
+    "react-redux": "^6.0.0",
     "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.7",
     "redux-saga": "^0.16.2"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
+    "eslint": "^5.12.0",
     "jest-expo": "^32.0.0",
     "prettier": "^1.15.3"
   },
