--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@expo/samples": "2.1.1",
     "@expo/vector-icons": "^9.0.0",
     "@shoutem/ui": "^0.23.9",
+    "@ungap/url-search-params": "^0.1.2",
     "expo": "^32.0.0",
     "immer": "^1.10.5",
     "react": "16.5.0",
