--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "immer": "^1.10.5",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-elements": "^0.19.1",
     "react-native-iphone-x-helper": "^1.2.0",
     "react-native-switch-toggle": "^1.0.7",
     "react-navigation": "^3.0.9",
