Display the listing from API

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@ungap/url-search-params": "^0.1.2",
     "expo": "^32.0.0",
     "immer": "^1.10.5",
+    "moment": "^2.23.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-elements": "^0.19.1",
