--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@expo/vector-icons": "^9.0.0",
     "@ungap/url-search-params": "^0.1.2",
     "axios": "^0.18.0",
+    "exp": "^57.2.1",
     "expo": "^32.0.0",
     "immer": "^1.10.5",
     "moment": "^2.23.0",
