--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
     "eslint": "^5.12.0",
+    "eslint-config-rallycoding": "^3.2.0",
     "jest-expo": "^32.0.0",
     "prettier": "^1.15.3"
   },
