--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "exp": "^57.2.1",
     "expo": "^32.0.0",
     "immer": "^1.10.5",
+    "lodash": "^4.17.11",
     "moment": "^2.23.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
