Add carousel & change progressCard

--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "axios": "^0.18.0",
     "exp": "^57.2.1",
     "expo": "^31.0.6",
+    "expo-app-auth": "^2.0.0",
+    "expo-background-fetch": "^1.0.0",
+    "expo-google-sign-in": "^2.0.0",
     "immer": "^1.10.5",
     "lodash": "^4.17.11",
     "moment": "^2.23.0",
@@ -26,6 +29,7 @@
     "react-native-elements": "^0.19.1",
     "react-native-iphone-x-helper": "^1.2.0",
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
+    "react-native-snap-carousel": "^3.7.5",
     "react-native-switch-toggle": "^1.0.7",
     "react-navigation": "^3.0.9",
     "react-redux": "^6.0.0",
