--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "sc4sc-app",
-    "slug": "sc4sc-app",
+    "name": "KAIREN",
+    "slug": "kairen",
     "privacy": "public",
     "sdkVersion": "31.0.0",
     "platforms": ["ios", "android"],
