--- a/app.json
+++ b/app.json
@@ -4,7 +4,10 @@
     "slug": "kairen",
     "privacy": "public",
     "sdkVersion": "31.0.0",
-    "platforms": ["ios", "android"],
+    "platforms": [
+      "ios",
+      "android"
+    ],
     "version": "1.0.6",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -19,9 +22,11 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
-      "buildNumber" : "1",
+      "buildNumber": "2",
       "supportsTablet": false,
       "bundleIdentifier": "kr.ac.kaist.kairen.kairen",
       "infoPlist": {
@@ -31,7 +36,10 @@
     "android": {
       "package": "kr.ac.kaist.kairen.kairen",
       "versionCode": 3,
-      "permissions": ["ACCESS_COARSE_LOCATION", "ACCESS_FINE_LOCATION"]
+      "permissions": [
+        "ACCESS_COARSE_LOCATION",
+        "ACCESS_FINE_LOCATION"
+      ]
     }
   }
 }
