--- a/package.json
+++ b/package.json
@@ -50,9 +50,12 @@
     "reselect": "^4.0.0"
   },
   "devDependencies": {
+    "@types/googlemaps": "^3.36.5",
+    "@types/markerclustererplus": "^2.1.33",
+    "@types/react": "^16.8.22",
     "babel-plugin-dotenv": "^0.1.1",
     "babel-preset-expo": "^5.2.0",
-    "eslint": "^6.0.0",
+    "eslint": "^6.0.1",
     "eslint-config-rallycoding": "^3.2.0",
     "jest-expo": "^33.0.0",
     "prettier": "^1.18.2"
