--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "lodash": "^4.17.11",
     "moment": "^2.23.0",
     "react": "16.8.3",
+    "react-dom": "^16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-elements": "^1.1.0",
     "react-native-iphone-x-helper": "^1.2.1",
@@ -44,6 +45,7 @@
     "react-native-sentry": "^0.43.2",
     "react-native-snap-carousel": "^3.8.0",
     "react-native-switch-toggle": "^1.1.0",
+    "react-native-web": "^0.11.7",
     "react-navigation": "^3.11.0",
     "react-redux": "^7.1.0",
     "redux": "^4.0.1",
