--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "kairen",
     "privacy": "public",
     "sdkVersion": "33.0.0",
-    "platforms": ["ios", "android"],
+    "platforms": ["ios", "android", "web"],
     "version": "1.0.6",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
