[training-mode] Change broken UI

--- a/app.json
+++ b/app.json
@@ -34,7 +34,7 @@
       "permissions": ["ACCESS_COARSE_LOCATION", "ACCESS_FINE_LOCATION"]
     },
     "androidStatusBar": {
-      "backgroundColor": "transparent"
+      "backgroundColor": "#ffffff"
     }
   }
 }
