--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@expo/samples": "^3.0.2",
     "@expo/vector-icons": "^10.0.2",
+    "@types/react-native-app-intro-slider": "^3.0.0",
     "@ungap/url-search-params": "^0.1.2",
     "axios": "^0.19.0",
     "exp": "^57.2.1",
@@ -40,6 +41,7 @@
     "react": "16.8.3",
     "react-dom": "^16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
+    "react-native-app-intro-slider": "^3.0.0",
     "react-native-elements": "^1.1.0",
     "react-native-iphone-x-helper": "^1.2.1",
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
